ecmascript/parser/tests/test262-error-references/fail/8af69d8f15295ed2.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/8af69d8f15295ed2.js:1:4
  |
1 | (' ')
  |    ^^

